--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   spark-master:
     image: apache/spark:3.5.3
     container_name: spark-master
+    profiles: ["spark"]
     ports:
       - "9090:8080"  # Spark Master Web UI
       - "7077:7077"  # Spark Master port
@@ -25,6 +26,7 @@ services:
   spark-worker-1:
     image: apache/spark:3.5.3
     container_name: spark-worker-1
+    profiles: ["spark"]
     depends_on:
       - spark-master
     ports:
@@ -46,6 +48,7 @@ services:
   spark-worker-2:
     image: apache/spark:3.5.3
     container_name: spark-worker-2
+    profiles: ["spark"]
     depends_on:
       - spark-master
     ports:
@@ -67,6 +70,7 @@ services:
   # spark-worker-3:
   #   image: apache/spark:3.5.3
   #   container_name: spark-worker-3
+  #   profiles: ["hdfs"]
   #   depends_on:
   #     - spark-master
   #   ports:
@@ -89,6 +93,7 @@ services:
     image: apache/hadoop:3.4.1
     container_name: namenode
     hostname: namenode
+    profiles: ["hdfs"]
     user: root
     environment:
       - HADOOP_HOME=/opt/hadoop
@@ -109,6 +114,7 @@ services:
     image: apache/hadoop:3.4.1
     container_name: datanode
     hostname: datanode
+    profiles: ["hdfs"]
     user: root
     environment:
       - HADOOP_HOME=/opt/hadoop
